user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-deployment
  template:
    metadata:
      labels:
        app: user-deployment
    spec:
      containers:
      - name: user-deployment
        image: chamathranaweera/user-service-img:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 300
        #   periodSeconds: 300
        #   failureThreshold: 2
        resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service 
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
  - name: user-port
    port: 80
    protocol: TCP
    targetPort: 8000
